# Atlas

./: .bazelrc  .gitignore  BUILD  Dockerfile  MODULE.bazel  PROPOSAL.md  README.md  generator.py  requirements.txt  run_container.sh
.bazel/: Atlas  bin  out  testlogs
src/core/: BUILD  external_sort.cc  external_sort.h  io.cc  io.h  joiner.cc  joiner.h  mem_monitor.h  memory_arena.cc  memory_arena.h  radix_sort.cc  radix_sort.h  record_comparator.h  types.h
src/main/: BUILD  atlas_join.cc  atlas_sort.cc
test/: BUILD  external_sort_test.cc  memory_arena_test.cc  memory_limit_test.cc  radix_sort_test.cc
